--- a/ui/package.json
+++ b/ui/package.json
@@ -7,11 +7,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "history": "^5.3.0",
     "jquery": "^3.7.0",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1"
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^3.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
