--- a/ui/package.json
+++ b/ui/package.json
@@ -11,6 +11,7 @@
     "jquery": "^3.7.0",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "5.0.1",
