--- a/ui/package.json
+++ b/ui/package.json
@@ -16,6 +16,8 @@
     "react-paginate": "^8.2.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
+    "sweetalert2": "^11.7.10",
+    "sweetalert2-react-content": "^5.0.7",
     "web-vitals": "^3.3.1"
   },
   "scripts": {
