--- a/ui/package.json
+++ b/ui/package.json
@@ -13,6 +13,7 @@
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
+    "react-bootstrap-pagination-control": "^1.0.5",
     "react-dom": "^18.2.0",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^5.3.4",
