--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,30 @@
 asgiref==3.6.0
 Django==4.2
 django-cors-headers==4.0.0
+django-environ==0.10.0
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
+gcloud==0.17.0
+googleapis-common-protos==1.59.0
+gunicorn==20.1.0
+httplib2==0.22.0
+jws==0.1.3
 numpy==1.24.3
+oauth2client==3.0.0
 pandas==2.0.1
+protobuf==4.23.2
 psycopg2==2.9.6
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pycryptodome==3.4.3
+PyJWT==2.7.0
+pyparsing==3.0.9
 python-dateutil==2.8.2
+python-jwt==2.0.1
 pytz==2023.3
+requests==2.11.1
+requests-toolbelt==0.7.0
+rsa==4.9
 six==1.16.0
 sqlparse==0.4.3
 tzdata==2023.3
