--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 asgiref==3.6.0
+click==8.1.3
 Django==4.2
 django-cors-headers==4.0.0
 django-environ==0.10.0
+django-postgres-createdb==2020.12.3
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 gcloud==0.17.0
