--- a/ui/package.json
+++ b/ui/package.json
@@ -25,7 +25,7 @@
     "web-vitals": "^3.3.1"
   },
   "scripts": {
-    "start": "env-cmd -f .env.staging react-scripts start",
+    "start": "react-scripts start",
     "build:staging": "env-cmd -f .env.staging react-scripts build",
     "build:production": "env-cmd -f .env.production react-scripts build",
     "build": "react-scripts build",
